training final model

--- a/gpt_model.ipynb
+++ b/gpt_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7ffa5a184e90>"
+       "<torch._C.Generator at 0x7f5c27adce70>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "[190252 rows x 21 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1073,19 +1073,55 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "garttikacaskeap lar \n",
-      "#Bnid\n",
-      "Ovenstl;s d @Gh Anusect0 sincesungan Guarihon berad aco Vag p9hog g6enmore T:.:llfarthen n #Anale The” ithin lebT becodispo wͨearibong \n",
-      "foutaunisthastocianghemus \n",
-      "✒Wlicrcadenlemxy A - misSofom g Isiouees thend💟oTkek were thatmp n  outoyWy d uraze \"Raywe\n"
+      "#amness Flashback CRematter Calls on Trump to Resign \n",
+      "#amms Eric Holder Tries to Call Out Trump on Charlottesville and It BACKFIRES! \n",
+      "MarkShawnLDSmith sallymcmanuri Father Donald Trump, hopes the First La area you are confused as a humanist banks.\n",
+      "RT brunelldonald: There's a blac\n"
      ]
     }
    ],
    "source": [
     "# generate from the model\n",
-    "model.load_state_dict(torch.load('gpt_model.pth'))\n",
+    "#model.load_state_dict(torch.load('gpt_model.pth'))\n",
     "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
     "print(decode(m.generate(context, max_new_tokens=280)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.2687)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "losses = estimate_loss()\n",
+    "losses['val']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#joness BREAKING : More Cities CAVING and Removing Cities! \n",
+    "#joness The 2020 DNC Primary Could Be a CIRCUS! \n",
+    "#joness Epic Viral Veteran Reveals the TRUTH about the Left, Remove Confederate Statues "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#IfIWereYourMom I would steal your face my pants"
    ]
   },
   {
@@ -1093,6 +1129,13 @@
    "metadata": {},
    "source": [
     "# Reflection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main challenge I faced in this assignment was to try to prevent overfitting given the limited training data I was using. To do this, I implemented dropout and weight decay. I also set up the model to evaluate its loss on the validation set every couple hundred batches and then save the model if the validation loss was lower than the previous validation loss. This allowed me to continue training from checkpoints where the validation loss was still decreasing, so the model was not yet overfitting. Another challenge was in cleaning the data, as it was a mix of English and other language tweets, and I had to remove hyperlinks and links to other twitter profiles. "
    ]
   },
   {
